[project]
name = "cyver-eval"
version = "0.1.0"
description = ""
authors = [
    {name = "alex"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false

[tool.poetry.dependencies]
cyver = "^1.3.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
